syntax = "proto3";
import "org/tty/dailyset/dailyset_cloud/common.proto";


package org.tty.dailyset.dailyset_cloud;


option java_multiple_files = true;
option java_package = "org.tty.dailyset.dailyset_cloud.grpc";
option java_outer_classname = "TicketProto";

service TicketService {
  // bind ticket.
  rpc bind(TicketBindRequest) returns (SimpleResponse);
  // rebind ticket.
  rpc rebind(TicketBindRequest) returns (SimpleResponse);
  // query the current bind info.
  rpc currentBindInfo(SimpleRequest) returns (CurrentBindInfoResponse);
  // unbind ticket.
  rpc unbind(SimpleRequest) returns (SimpleResponse);
  // force fetch ticket.
  rpc forceFetch(SimpleRequest) returns (SimpleResponse);
}

message TicketBindRequest {
  Token token = 1;
  string uid = 2;
  string password = 3;
}

message CurrentBindInfoResponse {
  int32 code = 1;
  string message = 2;
  TicketBindInfo bindInfo = 3;
}

message TicketBindInfo {
  enum TicketStatus {
    Initialized = 0;
    Checked = 1;
    Failure = 2;
    PasswordFailure = 3;
  }
  TicketStatus status = 1;
  string uid = 2;
  string departmentName = 3;
  string className = 4;
  string name = 5;
  int32 grade = 6;
}